[package]
name = "pinzh"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for converting Pinyin to Zhuyin (Bopomofo)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/pinzh"
keywords = ["pinyin", "zhuyin", "bopomofo", "chinese", "romanization"]
categories = ["text-processing", "internationalization"]

[dependencies]
